// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. error state if a component throws an error 1`] = `
<Text
  allowFontScaling={false}
>
  Error: an error occurred
</Text>
`;

exports[`2. error state if a component invokes an error 1`] = `
<Text
  allowFontScaling={false}
>
  Error: some error
</Text>
`;

exports[`3. good state if there is no error 1`] = `
<Text
  allowFontScaling={false}
>
  All good
</Text>
`;
